@@ -184,7 +184,7 @@ jobs:
         if: ${{ success() }}
         shell: bash
         run: |
-          git clone https://github.com/omnivector-solutions/slurm-bundles -b 1.1.0 ../slurm-bundles
+          git clone https://github.com/omnivector-solutions/slurm-bundles -b 1.2.0 ../slurm-bundles
 
           juju whoami
           juju list-models
@@ -197,17 +197,16 @@ jobs:
 
               juju deploy --verbose --debug \
                           ./../slurm-bundles/slurm-core/bundle.yaml \
-                          --overlay ./../slurm-bundles/slurm-core/focal/bundle.yaml \
                           --overlay ./../slurm-bundles/slurm-core/clouds/aws.yaml \
-                          --overlay ./../slurm-bundles/slurm-core/focal/clouds/aws.yaml
+                          --overlay ./../slurm-bundles/slurm-core/series/focal.yaml
               ;;
 
             "centos7")
 
               juju deploy --verbose --debug \
                           ./../slurm-bundles/slurm-core/bundle.yaml \
-                          --overlay ./../slurm-bundles/slurm-core/centos7/bundle.yaml \
-                          --overlay ./../slurm-bundles/slurm-core/clouds/aws.yaml
+                          --overlay ./../slurm-bundles/slurm-core/clouds/aws.yaml \
+                          --overlay ./../slurm-bundles/slurm-core/series/centos7.yaml
               ;;
           esac
 
@@ -240,11 +239,8 @@ jobs:
           model=${{ steps.vars.outputs.sha_short }}-${{ matrix.series }}
 
           # Remove the applications and wait for the model to empty
-          juju remove-application -m $model slurmctld slurmdbd slurmd percona-cluster
+          juju remove-application -m $model slurmctld slurmdbd slurmd slurmrestd percona-cluster
 
-          if [ "${{ matrix.series}}" = "focal" ]; then
-              juju remove-application -m $model slurmrestd
-          fi
           juju-wait -m $model
 
       - name: "Grab the charm logs"
@@ -256,10 +252,6 @@ jobs:
               log=$charm-$model.log
               juju debug-log --replay --include $charm > $log
           done
-
-          if [ "${{ matrix.series}}" = "focal" ]; then
-              juju debug-log --replay --include slurmrestd > slurmrestd-$model.log
-          fi
 
       - name: "Upload slurm charm logs"
         if: ${{ always() }}
