@@ -7,6 +7,9 @@ This file keeps track of all notable changes to the Slurm Charms.
 Unreleased
 ----------
 
+- add slurmrestd to CentOS7
+- fix slurmrestd Systemd environment variables to enable jwt auth
+
 0.6.4 - 2021-06-11
 ------------------
 
